# blendx-study-planner

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  docker-compose.yml  skills-lock.json
.agents/skills/pytest/: SKILL.md
.agents/skills/to-prd/: SKILL.md
.github/workflows/: deploy.yml
backend/: AGENTS.md  CONTEXT.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 0004_add_documents_and_chunks.py  0005_add_subtopic_and_constraints.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  chat.py  documents.py  plans.py  users.py
backend/app/clients/: openai_client.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  plan_document.py  study_plan.py  study_task.py
backend/app/repositories/: document_repository.py
backend/app/schemas/: agent.py  chat.py  plan_document.py  study_plan.py  study_task.py  task_generation.py
backend/app/services/: agent_service.py  chat_service.py  document_service.py  generation_service.py
backend/app/templates/: breakdown.txt  generate_agent_tasks.txt  generate_tasks.txt
backend/tests/: conftest.py  test_agent.py  test_chat.py  test_documents.py  test_task_generation.py
docs/adr/: 0001-fargate-public-subnet.md  0002-single-dockerfile.md  0003-cicd-oidc-pipeline.md  0004-cloudfront-https-workaround.md  0004-pgvector-for-rag.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 001-aws-deployment.md
frontend/: AGENTS.md  CONTEXT.md
frontend/src/api/: client.ts
frontend/src/pages/auth/: LoginPage.tsx
infra/: AGENTS.md  CONTEXT.md  README.md  cdk.context.json  package-lock.json
infra/lib/: app-stack.ts  networking-stack.ts
infra/test/: infra.test.ts
(+12 files in other folders)
