[project]
name = "ai-study-planner-backend"
version = "0.1.0"
description = "AI Study Planner backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.0",
    "bcrypt==4.2.0",
    "PyJWT==2.9.0",
    "openai>=2.38.0",
    "instructor>=1.15.1",
    "tenacity>=9.1.4",
    "pgvector>=0.3.6",
    "pypdf2>=3.0.1",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "python-multipart>=0.0.29",
    "sse-starlette>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "pytest-mock>=3.15.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
lint.select = ["E", "F", "I", "FAST"]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
